tests/errors/validation/op-at-top-level.fn
---
Description: Operator declared at top level outside any type
Expected: FN2000
---

op +(a: i32, b: i32) -> i32
{
    return a + b
}

type Program
{
    static fn Main -> i32
    {
        return 0
    }
}
